# otus-ma-2023-12

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: main.py
app/api/health/: __init__.py
app/api/health/endpoints/: get.py
deploy/home_work_03/: README.md  postman_collection.json
deploy/home_work_03/ingress/: values.yaml
deploy/home_work_03/k8s/: deployment.yaml  ingress.yaml  service.yaml
docker/: Dockerfile  entrypoint.sh
