[tool.poetry]
name = "otus-ma-2023-12"
version = "0.1.0"
description = ""
authors = ["Yuriy Zagranichnyy <zyuri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = "0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
